@startuml
'https://plantuml.com/class-diagram
skinparam linetype ortho

class User

enum Role {
    GUEST
    USER
    ADMIN
}

abstract class Entity{
    -Long id;
}

abstract class Account{
    -String username;
    -String email;
    -String password;
    -Set<Role> setRole;
}

class Product{
    -String productName;
    -String count;
    -Money price;
    -...
}

class Order{
    -Set<Product> setProduct
    -...
}


class Card{
    -String numberCard;
    -String cardEndDataMonth;
    -String cardEndDataYear;
    -String CVC2;
    -Money amount;
    -...
}
abstract class Money{
    - Long amount;
    - Currency currency;
}

class MoneyCard {
    - Long limitAmount;
}

class MoneyCostProduct{
}

class User{
    -...
}

class Token{
    -...
}

' Relationship between entities '

Account <|-- User
Account "1" *-- "*" Role : has
User "1" *-- "*" Order : owns
User "1" *-- "*" Card : owns
User "1" *-- "*" Token : owns
Order "1" *-- "*" Product : owns
Card "1" *-- "*" MoneyCard : owns
Product "1" *-- "*" MoneyCostProduct : owns

Entity <|-- Account
Entity<|-- Order
Entity<|-- Product
Entity<|-- Money
Entity<|-- Card
Entity<|-- Token

Money<|-- MoneyCard
Money<|-- MoneyCostProduct
@enduml